more additions and tweaks

--- a/praxis-site/src/components/HomepageBatteriesIncludedSection/styles.module.css
+++ b/praxis-site/src/components/HomepageBatteriesIncludedSection/styles.module.css
@@ -7,13 +7,19 @@
 }
 
 .title {
-  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
+  /* text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3); */
   font-family: 'Ubuntu', sans-serif;
 }
 
-li {
+.features li {
   font-size: 1.1rem;
-  color: #606470;
+  color: #1C1e21;
   font-weight: 400;
   margin-bottom: 0.5rem;
+}
+
+[data-theme='dark'] {
+  .features li {
+    color: #fff;
+  }
 }
