--- a/praxis-site/src/components/HomePageFAQ/styles.module.css
+++ b/praxis-site/src/components/HomePageFAQ/styles.module.css
@@ -37,3 +37,11 @@
   padding-right: 20px;
   font-size: small;
 }
+
+[data-theme='dark'] {
+  .how {
+    background-color: #3e3d3d;
+    border-bottom: 3px solid #2d2d2d;
+    color: #fff;
+  }
+}
