--- a/praxis-site/src/components/HomepageGettingThisSection/styles.module.css
+++ b/praxis-site/src/components/HomepageGettingThisSection/styles.module.css
@@ -13,7 +13,7 @@
 }
 
 .title {
-  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
+  /* text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3); */
   font-family: 'Ubuntu', sans-serif;
   text-align: center;
 }
