--- a/praxis-site/src/pages/index.module.css
+++ b/praxis-site/src/pages/index.module.css
@@ -21,3 +21,19 @@
   align-items: center;
   justify-content: center;
 }
+
+.descriptionRow {
+  display: flex;
+  align-items: center;
+  padding: 2rem 0;
+  width: 100%;
+  justify-content: center;
+  background-image: url(/img/praxis-pattern-bg.png);
+  background-repeat: repeat;
+  /* background-position: contain; */
+  background-size: 100%;
+  font-size: large;
+  font-weight: 500;
+  /* background-color: #f4f7f810; */
+  /* background-blend-mode: lighten; */
+}
