brought over the docs from the previous site copy

--- a/praxis-site/src/pages/index.module.css
+++ b/praxis-site/src/pages/index.module.css
@@ -28,7 +28,7 @@
   padding: 2rem 0;
   width: 100%;
   justify-content: center;
-  background-image: url(/img/praxis-pattern-bg.png);
+  /* background-image: url(/img/praxis-pattern-bg.png); */
   background-repeat: repeat;
   /* background-position: contain; */
   background-size: 100%;
