try a different infima set of colors

--- a/praxis-site/src/css/custom.css
+++ b/praxis-site/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #38265e;
+  --ifm-color-primary-dark: #322255;
+  --ifm-color-primary-darker: #302050;
+  --ifm-color-primary-darkest: #271b42;
+  --ifm-color-primary-light: #3e2a67;
+  --ifm-color-primary-lighter: #402c6c;
+  --ifm-color-primary-lightest: #49317a;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --ifm-font-family-base: 'Lato', sans-serif;
@@ -21,13 +21,13 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #928bc6;
+  --ifm-color-primary-dark: #7d74bb;
+  --ifm-color-primary-darker: #7269b5;
+  --ifm-color-primary-darkest: #574e9e;
+  --ifm-color-primary-light: #a7a2d1;
+  --ifm-color-primary-lighter: #b2add7;
+  --ifm-color-primary-lightest: #d2cfe7;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
